--- a/fhir-server/.env
+++ b/fhir-server/.env
@@ -1,3 +1,7 @@
 INTROSPECTION_URL=http://localhost:8000/api/introspection
 CLIENT_ID=3
 CLIENT_SECRET=FjoQQkBHsZeLeQvawG5mfveOQqnBofE7LHobCf1H
+
+COUCHBASE_USERNAME=Administrator
+COUCHBASE_PASSWORD=password
+COUCHBASE_BUCKET=fhir_sample
