--- a/fhir-server/package.json
+++ b/fhir-server/package.json
@@ -15,6 +15,7 @@
     "@asymmetrik/sof-strategy": "^1.1.1",
     "couchbase": "^3.0.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "fast-json-patch": "^3.0.0-1",
     "moment-timezone": "^0.5.31",
     "uuid": "^8.3.0"
