--- a/fhir-server/package.json
+++ b/fhir-server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "fast-json-patch": "^3.0.0-1",
     "moment-timezone": "^0.5.31",
+    "passport": "^0.4.1",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
